WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93324
[BlackBerry] HTML5 media does not handle SSL certificate failures
https://bugs.webkit.org/show_bug.cgi?id=93324
Summary
[BlackBerry] HTML5 media does not handle SSL certificate failures
Jonathan Dong
Reported
2012-08-06 19:19:28 PDT
RIM PR: 116205 We should pass stream client Id to platform player when loading a media url, which is needed by BlackBerry::Platform::MediaSSLHandlerStream for handling the certificate failure if media url is a https url and has a certificate failure reported by mm-renderer.
Attachments
Patch
(3.01 KB, patch)
2012-08-06 19:46 PDT
,
Jonathan Dong
no flags
Details
Formatted Diff
Diff
Patch
(2.80 KB, patch)
2012-09-19 20:09 PDT
,
Jonathan Dong
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jonathan Dong
Comment 1
2012-08-06 19:46:16 PDT
Created
attachment 156840
[details]
Patch
Antonio Gomes
Comment 2
2012-08-06 20:21:53 PDT
Comment on
attachment 156840
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=156840&action=review
td;dr
> Source/WebCore/platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.cpp:160 > + HTMLMediaElement* element = static_cast<HTMLMediaElement*>(m_webCorePlayer->mediaPlayerClient());
that is a layer violation
> Source/WebCore/platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.cpp:166 > + int playerId = static_cast<FrameLoaderClientBlackBerry*>(topdoc->frame()->loader()->client())->playerId();
that is a BIG layer violation
Joe Mason
Comment 3
2012-08-06 20:55:52 PDT
MediaPlayerPrivateBlackBerry already does both of those in other functions. Can we clean up all the layering violations in a followup patch?
Eric Seidel (no email)
Comment 4
2012-08-07 14:56:26 PDT
Comment on
attachment 156840
[details]
Patch Per above.
Eric Carlson
Comment 5
2012-08-08 09:15:09 PDT
(In reply to
comment #3
)
> MediaPlayerPrivateBlackBerry already does both of those in other functions. Can we clean up all the layering violations in a followup patch?
I r+'d earlier several bugs with layering violations with the agreement that the violations would be cleaned up, eg.
https://bugs.webkit.org/show_bug.cgi?id=82930
from mid April. Max filed
bug 84291
about one part of the cleanup, but so far it seems that nothing more has been done.
Jonathan Dong
Comment 6
2012-09-19 20:09:28 PDT
Created
attachment 164831
[details]
Patch
Eric Carlson
Comment 7
2012-09-20 19:54:58 PDT
Comment on
attachment 164831
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=164831&action=review
> Source/WebCore/platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.cpp:169 > - m_platformPlayer->load(modifiedUrl.utf8().data(), m_webCorePlayer->userAgent().utf8().data(), cookiePairs.utf8().data()); > + m_platformPlayer->load(playerID, modifiedUrl.utf8().data(), m_webCorePlayer->userAgent().utf8().data(), cookiePairs.utf8().data()); > else > - m_platformPlayer->load(modifiedUrl.utf8().data(), m_webCorePlayer->userAgent().utf8().data(), 0); > + m_platformPlayer->load(playerID, modifiedUrl.utf8().data(), m_webCorePlayer->userAgent().utf8().data(), 0);
Why did this compile if the number of parameters was incorrect?
Jonathan Dong
Comment 8
2012-09-21 01:30:11 PDT
Comment on
attachment 164831
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=164831&action=review
>> Source/WebCore/platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.cpp:169 >> + m_platformPlayer->load(playerID, modifiedUrl.utf8().data(), m_webCorePlayer->userAgent().utf8().data(), 0); > > Why did this compile if the number of parameters was incorrect?
Because our porting haven't got the buildbot for now :(, and we work on our private webkit repo firstly, then sync with upstream. This patch intends to pass the playerID into m_platformPlayer in order to create a SSLHandlingStream to perform SSL verification for the media engine.
Joe Mason
Comment 9
2012-09-21 06:24:15 PDT
(In reply to
comment #7
)
> (From update of
attachment 164831
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=164831&action=review
> > > Source/WebCore/platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.cpp:169 > > - m_platformPlayer->load(modifiedUrl.utf8().data(), m_webCorePlayer->userAgent().utf8().data(), cookiePairs.utf8().data()); > > + m_platformPlayer->load(playerID, modifiedUrl.utf8().data(), m_webCorePlayer->userAgent().utf8().data(), cookiePairs.utf8().data()); > > else > > - m_platformPlayer->load(modifiedUrl.utf8().data(), m_webCorePlayer->userAgent().utf8().data(), 0); > > + m_platformPlayer->load(playerID, modifiedUrl.utf8().data(), m_webCorePlayer->userAgent().utf8().data(), 0); > > Why did this compile if the number of parameters was incorrect?
The number of parameters used to be correct. Then we updated the BlackBerry::Platform::PlatformPlayer class in the blackberry "platform" library (an OS service), so now webkit won't compile with the most recent version of the platform lib. This patch updates webkit to compile with the latest version of "platform".
Eric Carlson
Comment 10
2012-09-21 12:18:42 PDT
Comment on
attachment 164831
[details]
Patch rs=me given Joe's informal review.
WebKit Review Bot
Comment 11
2012-09-21 12:23:43 PDT
Comment on
attachment 164831
[details]
Patch Clearing flags on attachment: 164831 Committed
r129244
: <
http://trac.webkit.org/changeset/129244
>
WebKit Review Bot
Comment 12
2012-09-21 12:23:47 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug