[BlackBerry] HTML5 media does not handle SSL certificate failures https://bugs.webkit.org/show_bug.cgi?id=93324

Patch by Jonathan Dong <jonathan.dong@torchmobile.com.cn> on 2012-09-21
Reviewed by Eric Carlson.

RIM PR: 116205
Passed FrameLoaderClientBlackBerry's playerId to MMRPlayer::load()
because MMRPlayer::load() added playerId as a new parameter, which
is required to initiate a MediaSSLHandlerStream to deal with
certificate failure when loading a "https" media url.

Internally reviewed by Joe Mason <jmason@rim.com>.

No new tests since there's no functional change.

* platform/graphics/blackberry/MediaPlayerPrivateBlackBerry.cpp:
(WebCore::MediaPlayerPrivate::load):

Canonical link: https://commits.webkit.org/115289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129244 268f45cc-cd09-0410-ab3c-d52691b4dbfc